update word and sentence to correct

--- a/index.html
+++ b/index.html
@@ -116,10 +116,12 @@
                             <h3 class="mb-0">청소기 로봇 제어 프로그램 제작</h3>
                             <div class="subheading mb-3">소프트온넷</div>
                             <h5>사용 기술 : HTML, CSS, Javascript, Jquery, Nodejs, ROS, PDDL</h5>
+                            <br>
+                            - 학교 수업 중 하나인 '산학 프로젝트'로 기업과 연계하여 학점을 받고 프로젝트를 수행하는 수업이었습니다.<br>
+                            <br>
                             <div>
                                 <h5>1, 프로젝트 소개</h5>
                                 - AI Planning 결과를 바탕으로 로봇의 움직임을 제어하여 원하는 위치에 충돌 없이 움직일 수 있도록 한다.<br>
-                                - 학교 수업 중 하나인 '산학 프로젝트'로 기업과 연계하여 학점을 받고 프로젝트를 수행하는 수업이었습니다.<br>
                             </div>
                             <p></p>
                             <div>
@@ -170,10 +172,12 @@
                             <h3 class="mb-0">자전거 경로 계획 페이지 제작</h3>
                             <div class="subheading mb-3">레이시오</div>
                             <h5>사용 기술 : HTML, CSS, Javascript, React, React Redux, Next.js, AntD, GraphHopper, Firebase, git</h5>
+                            <br>
+                            - 학교 수업 중 하나인 '산학 프로젝트'로 기업과 연계하여 학점을 받고 프로젝트를 수행하는 수업이었습니다.<br>
+                            <br>
                             <div>
                                 <h5>1, 프로젝트 소개</h5>
                                 - Trimm 앱과 연동 가능하며, 자전거 길 찾기 페이지를 만든다.<br>
-                                - 학교 수업 중 하나인 '산학 프로젝트'로 기업과 연계하여 학점을 받고 프로젝트를 수행하는 수업이었습니다.<br>
                             </div>
                             <p></p>
                             <div>
@@ -388,7 +392,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>분야에 상관없이 소프트웨어 기술이라면 모두 관심있고 배우고 싶습니다. 그 중에서도 가장 잘하고 좋아하는 분야는 웹 개발 분야입니다. 백엔드와 프론트엔드 기술 모두 관심있으며 특히 React에 제일 관심이 많습니다. 이 밖에도
-                        도커와 쿠버네티스를 이용한 CNF 쪽도 관심이 있고, 데이터 플랫폼인 하둡과 스파크 쪽도 배워보고 싶어 준비중 입니다. 인공지능은 GAN에 푹 빠져있어 친구들과 함께 논문을 읽고 프로토타이핑을 해보고 있습니다. </p>
+                        도커와 쿠버네티스를 이용한 CNF 쪽도 관심이 있고, 데이터 플랫폼 개발에서의 하둡과 스파크 쪽도 배워보고 싶어 공부 중 입니다. 인공지능은 GAN에 푹 빠져있어 친구들과 함께 논문을 읽고 프로토타이핑을 해보고 있습니다. </p>
                     <p class="mb-0">기술적인 측면 이외에 게임에 관심이 많습니다. 특히 롤을 좋아하고 LCK의 모든 팀을 좋아합니다. 이 밖에 맛집 탐방하는 것을 좋아하며 카페에 가서 바쁜 척 허세(?)부리는 것도 좋아합니다.</p>
                 </div>
             </section>
