correct wrong words

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            경진 지역 6개 대학 프로그래밍 대회(Shake!) 학교 대표 본선 진출 (2019/07/07)
+                            경인 지역 6개 대학 프로그래밍 대회(Shake!) 학교 대표 본선 진출 (2019/07/07)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
