--- a/index.html
+++ b/index.html
@@ -284,6 +284,35 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020/04/16~2020/06/26</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">5G 네트워크 테스트 자동화 프로그램</h3>
+                            <div class="subheading mb-3">삼성전자 인턴</div>
+                            <h5>사용 기술 :  Nodejs, Electron, Javascript, Jquery, Bootstrap,  Python </h5>
+                            <div>
+                                <h5>1, 프로젝트 소개</h5>
+                                - 사내 네트워크 시스템의 테스팅을 자동화는 프로그램을 만들도록 한다.<br> 
+                                - 입력으로 네트워크 시스템 설정 파일이 들어오면, 이를 파싱하여 테스트 명령어를  만든다.<br>
+                            </div>
+                            <p></p>
+                            <div>
+                                <h5>2, 역할 및 내용</h5>
+                                 사내 네트워크 시스템에는 네트워크 시스템 설정 파일들이 존재했습니다. 
+                                 이 파일을 변경하거나, 새로 추가하게 되면 테스트 코드를 개발자가 일일히 만들어 테스팅을 하였습니다. 
+                                 이는 개발자들의 시간을 많이 잡아먹는다는 문제와 수많은 테스트 케이스 중에 대표 케이스만 테스팅하게 되어 시스템의 결함이 존재할 수 있다는 문제점이 있었습니다. 
+                                 이를 해결하고자 멘토님과 협의하여 2주간 테스팅 자동화 프로그램을 만들기로 하였고, 개발과 시스템 설계를 도맡았습니다. 
+                                 네트워크 시스템 설정 파일들을 입력으로 받게되는데, 해당 파일에서 테스팅에 필요한 정보들을 추출하기위해 python을 사용하였습니다. 
+                                 데스크탑 프로그램으로 윈도우와 우분투에서 작동 가능한 프로그램을 요구하여, Electron으로 개발을 하였고 GUI 개발은 jquery와 bootstrap을 이용하여 개발  시간을 절약했습니다.
+                            <p></p>
+                            <div>
+                            <br>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#project_5g">Image</button>
+                            <br>
+                            * 해당 프로젝트는 회사에서 프로그램 공개를 거부했습니다.
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020/07/30~2020/08/28</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -335,7 +364,6 @@
                         <li class="list-inline-item">Python(B)</li>
                         <li class="list-inline-item">Java(B)</li>
                         <li class="list-inline-item">Kotlin(B)</li>
-                        <li class="list-inline-item">Go(C)</li>
                     </ul>
                     <h3 class="mb-1">frontend</h3>
                     <ul class="list-inline dev-icons">
@@ -354,6 +382,7 @@
                     <h3 class="mb-1">backend</h3>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">NodeJS-Express(B)</li>
+                        <li class="list-inline-item">NodeJS-Electron(B)</li>
                         <li class="list-inline-item">Spring(C)</li>
                         <li class="list-inline-item">Django(C)</li>
                         <li class="list-inline-item">MYSQL(C)</li>
@@ -376,7 +405,8 @@
                     </ul>
                     <h3 class="mb-1">CLOUD</h3>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">Docker(C)</li>
+                        <li class="list-inline-item">Docker(B)</li>
+                        <li class="list-inline-item">Kubernates(C)</li>
                     </ul>
                     <h3 class="mb-1">COMMUNICATION</h3>
                     <ul class="list-inline dev-icons">
@@ -425,6 +455,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             ICT인턴십 노보네트웍스 풀스택 개발자 인턴 수료 (2020/03/16~2020/06/26)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+                            삼성전자 네트워크 사업부 SW인턴 수료 (2020/07/30~2020/08/28)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
