--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
                             <p></p>
                             <div>
                             <br>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#project_5g">Image</button>
                             <br>
                             * 해당 프로젝트는 회사에서 프로그램 공개를 거부했습니다.
                             </div>
@@ -636,7 +635,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">KLAYTN 블록체인을 활용한 의료 통합 플랫폼</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">5G 네트워크 장비 시뮬레이션 페이지</h2>
                                     <!-- Portfolio Modal - Image-->
                                     <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel" style="background-color: lightgray;">
                                         <ol class="carousel-indicators">
