--- a/index.html
+++ b/index.html
@@ -312,6 +312,43 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020/07/30~2020/08/28</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">블록체인과 인공지능을 이용한 웹툰 플랫폼</h3>
+                            <div class="subheading mb-3">한국항공대 소프트웨어 공모전</div>
+                            <h5>사용 기술 : Html, css, React, React-hooks, Redux , Typescript, Nodejs, Flask, Klaytn, MongoDB, git</h5>
+                            <div>
+                                <h5>1, 프로젝트 소개</h5>
+                            - 블록체인을 이용하여 독자가 작가에게 직접 사용료를 지급하고, 플랫폼은 최소한의 개입만 참여하도록 한다.<br>
+                            - 플랫폼은 작가의 작품에만 의존하는 것이 아닌, 플랫폼만의 서비스를 개발하기위하여 인공지능(GAN, NLP, Steganography)를 이용한다.<br>
+                            - 플랫폼은 작가들이 사용하기 편하도록 별도의 관리자 시스템을 구축한다.<br>
+                            </div>
+                            <p></p>
+                            <div>
+                                <h5>2, 역할 및 내용</h5>
+                                4인 팀으로 구성되었고, 저는 기획, 프론트 엔드(혼자), 백엔드, 블록체인 연동을 담당하였습니다. <br>
+                                블록체인을 이용하여 독자가 직접 작가에게 사용료를 지불하고, 작가는 자신의 작품 활동에 대한 충분한 보수를 받도록 하였습니다. 또한, 작가의 작품에만 의존하는 기존 플랫폼과는 달리
+                                인공지능을 이용하여 독자를 웹툰 캐릭터로 만들어주는 서비스를 제공하고, 작가의 작품이 유출되면 처벌을 할 수 있도록 하였습니다. <br>
+                                2등을 수상하였고, 이후 간단하게 인공지능 서비스를 배포할 수 있도록 컴팩트한 웹 프로그램을 개발 중에 있습니다. 
+                                
+                            </div>
+                            <p></p>
+                            <div>
+                                <h5>3, 문제</h5>
+                                사용자가 자신의 사진을 찍어서 flask로 보내면, 인공지능 프로그램을 통해 웹툰 스타일로 변환하고 전송하려고 하였습니다. 그런데, 문제는 타입 변환이 문제였습니다.
+                                웹화면에서 사진을 찍어 보면 사진은 byte로 직렬화되어 서버에 보내졌고, 이를 받은 인공지능 모델은 타입을 변환하라고 했습니다. 
+                                문제는 타입 문제라고 에러 로그가 발생한 것이 아니라 에러가 발생했다고만 나왔습니다. 결국 직접 모델을 하나하나 분석하면서 타입이 안맞는 부분을 고쳐나갔습니다. 
+                                이후로, 데이터 전처리 단계가 매우 중요하다는 것을 깨닫았습니다.
+                                <br>
+                            <br>
+                            <a class="btn btn-primary" href="https://youtu.be/tnxIzn5vjOE">동영상 보기</a>
+                            <a class="btn btn-primary" href="https://github.com/gyu-young-park/WebToonPlatforn_DS">기허브</a>
+                            <br>
+                                
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020/09/01~2020/10/23</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -458,6 +495,14 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             삼성전자 네트워크 사업부 SW인턴 수료 (2020/07/30~2020/08/28)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            금상(2등) - 한국항공대 4차 산업 SW 개발 대회 (2020/09/01~2020/10/23)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+                            구글 머신러닝 부트캠프 참여 중 (2020/10/16~진행 중)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
