--- a/index.html
+++ b/index.html
@@ -297,17 +297,16 @@
                             <p></p>
                             <div>
                                 <h5>2, 역할 및 내용</h5>
-                                 사내 네트워크 시스템에는 네트워크 시스템 설정 파일들이 존재했습니다. 
-                                 이 파일을 변경하거나, 새로 추가하게 되면 테스트 코드를 개발자가 일일히 만들어 테스팅을 하였습니다. 
-                                 이는 개발자들의 시간을 많이 잡아먹는다는 문제와 수많은 테스트 케이스 중에 대표 케이스만 테스팅하게 되어 시스템의 결함이 존재할 수 있다는 문제점이 있었습니다. 
-                                 이를 해결하고자 멘토님과 협의하여 2주간 테스팅 자동화 프로그램을 만들기로 하였고, 개발과 시스템 설계를 도맡았습니다. 
-                                 네트워크 시스템 설정 파일들을 입력으로 받게되는데, 해당 파일에서 테스팅에 필요한 정보들을 추출하기위해 python을 사용하였습니다. 
-                                 데스크탑 프로그램으로 윈도우와 우분투에서 작동 가능한 프로그램을 요구하여, Electron으로 개발을 하였고 GUI 개발은 jquery와 bootstrap을 이용하여 개발  시간을 절약했습니다.
-                            <p></p>
-                            <div>
-                            <br>
-                            <br>
-                            * 해당 프로젝트는 회사에서 프로그램 공개를 거부했습니다.
+                                    사내 네트워크 시스템에는 네트워크 시스템 설정 파일들이 존재했습니다. 
+                                    이 파일을 변경하거나, 새로 추가하게 되면 테스트 코드를 개발자가 일일히 만들어 테스팅을 하였습니다. 
+                                    이는 개발자들의 시간을 많이 잡아먹는다는 문제와 수많은 테스트 케이스 중에 대표 케이스만 테스팅하게 되어 시스템의 결함이 존재할 수 있다는 문제점이 있었습니다. 
+                                    이를 해결하고자 멘토님과 협의하여 2주간 테스팅 자동화 프로그램을 만들기로 하였고, 개발과 시스템 설계를 도맡았습니다. 
+                                    네트워크 시스템 설정 파일들을 입력으로 받게되는데, 해당 파일에서 테스팅에 필요한 정보들을 추출하기위해 python을 사용하였습니다. 
+                                    데스크탑 프로그램으로 윈도우와 우분투에서 작동 가능한 프로그램을 요구하여, Electron으로 개발을 하였고 GUI 개발은 jquery와 bootstrap을 이용하여 개발  시간을 절약했습니다.
+                                <p></p>
+                                <br>
+                                <br>
+                                * 해당 프로젝트는 회사에서 프로그램 공개를 거부했습니다.
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020/07/30~2020/08/28</span></div>
@@ -342,7 +341,7 @@
                                 <br>
                             <br>
                             <a class="btn btn-primary" href="https://youtu.be/tnxIzn5vjOE">동영상 보기</a>
-                            <a class="btn btn-primary" href="https://github.com/gyu-young-park/WebToonPlatforn_DS">기허브</a>
+                            <a class="btn btn-primary" href="https://github.com/gyu-young-park/WebToonPlatforn_DS">깃허브</a>
                             <br>
                                 
                             </div>
