--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
                     <h3 class="mb-1">MOBILE</h3>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">Android(B)</li>
+                        <li class="list-inline-item">React-Native(C)</li>
                     </ul>
                     <h3 class="mb-1">AI</h3>
                     <ul class="list-inline dev-icons">
@@ -442,6 +443,11 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">Docker(B)</li>
                         <li class="list-inline-item">Kubernates(C)</li>
+                    </ul>
+                    <h3 class="mb-1">Data Engineering</h3>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item">Hadoop(C)</li>
+                        <li class="list-inline-item">Spark(C)</li>
                     </ul>
                     <h3 class="mb-1">COMMUNICATION</h3>
                     <ul class="list-inline dev-icons">
