correct  wrong words

--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
                     </ul>
                     <h3 class="mb-1">AI</h3>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">Pytorch(B)</li>
+                        <li class="list-inline-item">Pytorch(C)</li>
                         <li class="list-inline-item">Tensorflow2.x(C)</li>
-                        <li class="list-inline-item">GAN(B)</li>
+                        <li class="list-inline-item">GAN(C)</li>
                     </ul>
                     <h3 class="mb-1">BLOCKCHAIN</h3>
                     <ul class="list-inline dev-icons">
