update gyu_portpolio for job resume

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                     </div>
                     <p class="lead mb-5">한국항공대 소프트웨어학과에 2017년에 입학하고 처음으로 프로그래밍을 접하였습니다. 
                         항상 성장에 목말라있고, 소프트웨어 기술들에 관해 관심이 많아 이런저런 공부를 많이 했습니다.
-                        회사 프로젝트 경험으로는 회사 연계 프로젝트 2회, 4개월 간의 ict인턴십 경험이 있습니다.
-                    수상 경력으로는 6개 대학 프로그래밍 대회 본선 진출, 교내 소프트웨어 개발 공모전 2회 수상하였습니다.
+                        회사 프로젝트 경험으로는 회사 연계 프로젝트 2회, 4개월 간의 ict인턴십, 삼성전자 대학생 공채 인턴십 경험이 있습니다.
+                    수상 경력으로는 6개 대학 프로그래밍 대회 본선 진출, 교내 소프트웨어 개발 공모전 4회 수상하였습니다.
                     사회 경험으로는 호프집 알바 3개월, 냉면집 알바 3개월, 학교 행정실 근무 2개월 ,전산실 근무 2년을 했습니다.
-                그 밖에 학교 생활로는 학점 4.2, AI Planning 연구소 학부연구생 4개월, 국가 이공계 선정이 있습니다. 
+                그 밖에 학교 생활로는 학점 4.24, AI Planning 연구소 학부연구생 4개월, 국가 이공계 선정이 있습니다. 
+                현재는 삼성전자 네트워크 사업부에서 근무 중이며, 통신 쪽 도메인을 공부하고 있습니다.
                 기술적인 성장 외에도 인격적인 성장을 추구하며, 같이 일하고 싶은 성숙한 사람이 되기위해 항상 겸손하게 살고있습니다. 
                 </p>
                     <div class="social-icons">
@@ -348,6 +349,39 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020/09/01~2020/10/23</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Selfie2Webtoon</h3>
+                            <div class="subheading mb-3">한국항공대학교 캡스톤 디자인</div>
+                            <h5>사용 기술 : Html, css, React, React-hooks , Typescript, Flask, git</h5>
+                            <div>
+                                <h5>1, 프로젝트 소개</h5>
+                            - U-GAT-IT 모델을 사용하여 사용자의 얼굴을 웹툰 캐릭터로 변환하도록 한다. <br>
+                            - 웹과 스마트폰에서도 사용할 수 있도록 화면을 제작하고 모델을 경량화하도록 한다. <br>
+                            </div>
+                            <p></p>
+                            <div>
+                                <h5>2, 역할 및 내용</h5>
+                                3인 팀으로 구성되었고, 저는 기획, 프론트 엔드와 백엔드를 담당하였습니다. <br>
+                                인물의 selfie를 특정 웹툰 그림체로 바꾸어 주는 프로젝트로 스마트폰에서도 사용할 수 있도록 설계했습니다. <br>
+                                배포를 목적으로 구현하였기 때문에 EC2를 통해 일주일간 배포하였으나 GPU 비용 문제로 현재는 닫아놓아습니다.                                
+                            </div>
+                            <p></p>
+                            <div>
+                                <h5>3, 문제</h5>
+                                소통에서의 문제가 많았습니다. 인공지능 모델을 개발하는 팀원은 웹 개발 분야에 대해서 전혀 몰랐고, 저는 모델을 한 번도 적재해본 적이 없어 서로 간의 소통 문제와 구현 문제가 빈번했습니다.<br>
+                                이번 기회를 통해 의사소통 능력이 얼마나 중요하고, 서로 다른 도메인에 대한 이해도가 얼마나 필요한지 알게되었습니다. 이후, 대화를 통해 서로 간의 역할과 이해를 분명히 하도록 하였고, 저 역시도 인공지능 
+                                도메인에 대한 이해도를 높이기 위해 '구글 머신러닝 부트 캠프'에 참가하여 인공지능에 대한 이해도를 쌓고, 직접 모델을 개발해보았습니다.
+                                <br>
+                            <br>
+                            <a class="btn btn-primary" href="https://www.youtube.com/watch?v=MzxnIA9rVHk">동영상 보기</a>
+                            <a class="btn btn-primary" href="https://github.com/gyu-young-park/selfie2webtoon">깃허브</a>
+                            <br>
+                                
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020/10/23~2020/12/04</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -376,9 +410,19 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">한국항공대학교</h3>
                             <div class="subheading mb-3">소프트웨어학과</div>
-                            <p>학점: 4.22</p>
+                            <p>학점: 4.24/4.5 (수석 졸업)</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2017 3월 - 2021 2월 졸업예정</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017 3월 - 2021 2월</span></div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">삼성전자 네트워크 사업부</h3>
+                            <div class="subheading mb-3">OAM 개발 그룹</div>
+                            <p>현재(2021/03/14)는 통신과 알고리즘 교육 중에 있습니다. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 01월3일 ~ 현재</span></div>
                     </div>
                 </div>
             </section>
@@ -395,10 +439,9 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">C(B)</li>
                         <li class="list-inline-item">C++(B)</li>
-                        <li class="list-inline-item">C#(C)</li>
                         <li class="list-inline-item">Python(B)</li>
                         <li class="list-inline-item">Java(B)</li>
-                        <li class="list-inline-item">Kotlin(B)</li>
+                        <li class="list-inline-item">Kotlin(C)</li>
                     </ul>
                     <h3 class="mb-1">frontend</h3>
                     <ul class="list-inline dev-icons">
@@ -417,7 +460,7 @@
                     <h3 class="mb-1">backend</h3>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">NodeJS-Express(B)</li>
-                        <li class="list-inline-item">NodeJS-Electron(B)</li>
+                        <li class="list-inline-item">NodeJS-Electron(C)</li>
                         <li class="list-inline-item">Spring(C)</li>
                         <li class="list-inline-item">Django(C)</li>
                         <li class="list-inline-item">MYSQL(C)</li>
@@ -462,9 +505,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>분야에 상관없이 소프트웨어 기술이라면 모두 관심있고 배우고 싶습니다. 그 중에서도 가장 잘하고 좋아하는 분야는 웹 개발 분야입니다. 백엔드와 프론트엔드 기술 모두 관심있으며 특히 React에 제일 관심이 많습니다. 이 밖에도
-                        도커와 쿠버네티스를 이용한 CNF 쪽도 관심이 있고, 데이터 플랫폼 개발에서의 하둡과 스파크 쪽도 배워보고 싶어 공부 중 입니다. 인공지능은 GAN에 푹 빠져있어 친구들과 함께 논문을 읽고 프로토타이핑을 해보고 있습니다. </p>
-                    <p class="mb-0">기술적인 측면 이외에 게임에 관심이 많습니다. 특히 롤을 좋아하고 LCK의 모든 팀을 좋아합니다. 이 밖에 맛집 탐방하는 것을 좋아하며 카페에 가서 바쁜 척 허세(?)부리는 것도 좋아합니다.</p>
+                    <p>분야에 상관없이 소프트웨어 기술이라면 모두 관심있고 배우고 싶습니다. 그 중에서도 가장 잘하고 좋아하는 분야는 웹 개발 분야입니다. 백엔드와 프론트엔드 기술 모두 관심있으며 특히 React에 제일 관심이 많았습니다. 현재는
+                        회사 업무에 집중하고 있어 C언어 와 통신쪽 도메인 (LTE, NR) 공부에 집중하고 있습니다. </p>
+                    <p class="mb-0">기술적인 측면 이외에 게임에 관심이 많습니다. 특히 롤을 좋아하고 LCK의 모든 팀을 좋아합니다. 기타치는 것을 좋아하며, 쉬는 날에는 맛집 탐방하는 것을 좋아합니다.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -507,11 +550,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
-                            구글 머신러닝 부트캠프 참여 중 (2020/10/16~진행 중)
+                            구글 머신러닝 부트캠프 수료 및 Tensorflow Certification 취득 (2020/10/16~1/27) <br>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            대상(1등) - 한국항공대 캡스톤 디자인 대회(졸업 작품 대회)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
-                            한국항공대 2021 졸업예정 (현재 4-1학기 종료 학점 4.22)
+                            한국항공대 2021 졸업 (학점 : 4.24/4.5 수석 졸업)
                         </li>
                     </ul>
                 </div>
