added samsung pro algorithm grade

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/gyu-young-park"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://blog.naver.com/rbdud96"><i class="fab fa-neos"></i></a>
+                        <a class="social-icon" href="https://velog.io/@chappi"><i class="fab fa-blogger-b"></i></a>
                     </div>
                 </div>
             </section>
@@ -559,6 +560,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             한국항공대 2021 졸업 (학점 : 4.24/4.5 수석 졸업)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+                            삼성전자 알고리즘 등급 PRO취득(B형)
                         </li>
                     </ul>
                 </div>
